<resources>
    <string name="app_name">IRO</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="contact">Contact</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="adopt">ADOPT</string>
    <string name="login">LOGIN</string>
    <string name="save">SAVE</string>
    <string name="nname">Nickname</string>
    <string name="occupation">Occupation</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_locator">Locator</string>
    <string name="title_adoption">Adoption</string>
    <string name="title_guidelines">Guidelines</string>
    <string name="title_exit">Exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">Edit Profile</string>
    <string name="title_activity_adoption">Adoption</string>
    <string name="name_applicant">Name of Applicant</string>
    <string name="date_today">Date</string>
    <string name="children_age">If you have children, what are their ages?</string>
    <string name="pet_name">Name of Pet</string>
    <string name="pet_age">Age</string>
    <string name="pet_gender">Gender</string>
    <string name="adoption_form_header">Pet Adoption Application Form</string>
    <string name="adoption_form_details">Please fill this application form out. Be sure to provide complete and detailed answers. The evaluation of each adoption application will be done in the best interest of the pet. We thank you for taking the time to complete this application process and for adopting an IRO pet. Good luck.</string>
    <string name="pet_house_type">Will the pet be an indoor or outdoor pet?</string>
    <string name="pet_house">Do you have any other pets in the house? Please list what kind:</string>
    <string name="pet_past">If you have no pets now, have you had any in the past? When?</string>
    <string name="pet_describe">Please describe what happened to your pet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pet_backyard">Do you have a backyard or frontyard?</string>
    <string name="pet_fenced">Is your backyard or frontyard fenced?</string>
    <string name="pet_vet">If you have pets now, do you have a veterinarian?</string>
    <string name="pet_vet_name">If you have a veterinarian, please state his/her name.</string>
    <string name="pet_circumstances">What circumstances would cause you to give up a pet?</string>
    <string name="pet_home_visit">IRO, Island Rescue Organization, will do a home visist as part of the adoption evaluation. Is this agreeable to you?</string>
    <string name="no_visit">If no, please explain why</string>
    <string name="yes_visit">If yes, please tell us when the convenient times are for a home visist</string>
    <string name="pet_comments">Additional Comments</string>
    <string name="register_header">WHAT WE DO</string>
    <string name="register_details">IRO is home to over 100 companion animals who are awaiting adoption into forever homes. We aim to promote responsible ownership and humane treatment of all animals through outreach and education.</string>
    <string name="title_shop">Shop</string>
    <string name="terms_and_conditions">By checking this checkbox, I hereby declare that everything stated in this application is true and correct to the best of my knowledge and understanding. I would also attach any type of document to prove my identity. And I am fully aware that there is an amount of ₱500.00 for adoption fee.</string>
    <string name="submit">SUBMIT</string>
    <string name="reason">Why do you want this particular pet?</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_password">Save Password</string>
    <string name="my_adoption">My Adoptions</string>
    <string name="attachment">Attach File </string>
    <string name="no_post">No Post Yet</string>
    <string name="report1">Report Incident</string>
    <string name="iro">IRO</string>
    <string name="desc">Description</string>
    <string name="attached_file">Attached File</string>
    <string name="acknowledged_date">Acknowledged Date</string>
    <string name="approved_date">Approved Date</string>
    <string name="cancelled_date">Cancelled Date</string>
    <string name="rejected_date">Rejected Date</string>
    <string name="closed_date">Closed Date</string>
    <string name="cancelled_reason">Cancelled Reason</string>
    <string name="rejected_reason">Rejected Reason</string>
    <string name="volunteer">Volunteer</string>
    <string name="volunter_title">Volunteer Application Form</string>
    <string name="name">Name</string>
    <string name="instruction">Applicants should at least be 16 years old. Please check the checkbox according to your chosen committee/s(no limit) below:</string>
    <string name="instruction2">Please confirm your identity by attaching valid ID or documents.</string>
    <string name="transportation">Transportation</string>
    <string name="shelter">Shelter clean-up</string>
    <string name="education">Educational campaign</string>
    <string name="animal_welfare">Animal Welfare Implementation</string>
    <string name="fostering">Fostering</string>
    <string name="food_donation">Dog/Cat Food donation drive (sponsorship)</string>
    <string name="events">Fundraising and Events</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="volunteer_tab_1">Committee</string>
    <string name="volunteer_tab_2">Apply</string>
    <string name="volunteer_tab_3">History</string>
    <string name="volunter_history">Volunteer History</string>
    <string name="items">Items</string>
    <string name="guidelines">Guidelines</string>
    <string name="title">Title</string>
    <string name="title_events">Events</string>
    <string name="my_reports">My Reports</string>
    <string name="notifications">Notifications</string>
    <string name="no_notification">No Notifications</string>
    <string name="donation_tab_1">Donate</string>
    <string name="donation_tab_2">My Donation</string>
    <string name="donation">Donation</string>
    <string name="amount">Amount</string>
    <string name="date_verified">Date Verified</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="no_nearby">No Nearby Veterinary Care</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_donation">DonationActivity</string>
    <string name="tab_text_1">Committee</string>
    <string name="tab_text_2">Apply</string>
    <string name="tab_text_3">History</string>
    <string name="remittance_header">Remittance</string>
    <string name="bank_header">Bank</string>
    <string name="bank_name">Bank Name</string>
    <string name="recipient_name">Annalyn Aizpuru/Xemenia Judaya</string>
    <string name="recipient_address">37 F, Cabahug Street, Mabolo</string>
    <string name="recipient_contact">09322826312/09236084063</string>
    <string name="bank_name_value">China Bank</string>
    <string name="bank_acccount_number">2890396715</string>
    <string name="bank_account_name">Island Rescue Organization, INC.</string>
    <string name="acquired">Acquired</string>
</resources>
