<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_locator"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_locator" />

    <item
        android:id="@+id/navigation_adoption"
        android:icon="@drawable/ic_dog_face"
        android:title="@string/title_adoption" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_pet_shop"
        android:title="@string/title_shop" />

</menu>
